force-app/main/default/objects/Collection_Target__c/Collection_Target__c.object-meta.xml
<CustomObject>
    <label>Target</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>