force-app/main/default/objects/Collection_Target__c/fields/Producer_Account__c.field-meta.xml
<CustomField>
    <fullName>Producer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Targets</relationshipLabel>
    <relationshipName>Targets</relationshipName>
    <type>Lookup</type>
</CustomField>