force-app/main/default/objects/Collection_Target__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Box</fullName>
            </value>
            <value>
                <fullName>Construction and Demolition Waste</fullName>
            </value>
            <value>
                <fullName>IC&amp;I Printed Paper &amp; Packaging</fullName>
            </value>
            <value>
                <fullName>Municipal Hazardous or Special Waste</fullName>
            </value>
            <value>
                <fullName>Organics</fullName>
            </value>
            <value>
                <fullName>Textiles</fullName>
            </value>
            <value>
                <fullName>Tires</fullName>
            </value>
            <value>
                <fullName>Waste Electrical and Electronic Equipment</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>