force-app/main/default/objects/Collection_Target__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>